# railguns

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  fabfile.py  fabric.yaml  pyproject.toml  ruff.toml  setup.cfg  setup.py
railguns/: urls.py  views.py
railguns/cloudfile/: fields.py  widgets.py
railguns/developer/: urls.py  utils.py  views.py
railguns/developer/templates/: APIService.kt  APIService.swift  Model.kt  developer_index.html  downloads.html  model_java.txt  model_swift.txt  show_urls.html
railguns/django/: generics.py
railguns/django/contrib/: admin.py
railguns/django/contrib/auth/: backends.py
railguns/django/db/: middleware.py  models.py  utils.py
railguns/django/templatetags/: jstemplate.py
railguns/django/utils/: apps.py  html.py  translation.py
railguns/rest_framework/: authentication.py  generics.py  mixins.py  pagination.py  parsers.py  permissions.py  response.py  serializers.py  throttles.py  utils.py  views.py
railguns/rest_framework/schemas/: openapi.py
railguns/rest_framework_jwt/: utils.py
railguns/static/cloudfile/js/: scripts.js
railguns/static/railguns/es2015/: mixins.js  vendor.js
railguns/static/railguns/es2015/components/: mdc-common.js  mdc-components.js  weui-components.js
railguns/static/railguns/es2015/ui/: create.js  detail.js  list.js  mixins.js  update.js
railguns/static/railguns/es2015/util/: http-utils.js
railguns/static/railguns/es6/: django.js  service.js  vendor.js
railguns/static/railguns/es6/mdc/: common.js
railguns/static/railguns/es6/vue/: common.js  create.js  detail.js  drawer.js  list.js  mdc-components.js  mixins.js  update.js  weui-components.js
railguns/static/railguns/js/: django.js  f7.js  libs.js  mdc.js  mdl.js  mixins.js  service.js  su.js  vendor.js
railguns/static/railguns/js/components/: mdc-common.js  mdc-components.js  weui-components.js
railguns/static/railguns/js/mdc/: common.js  components.js
railguns/static/railguns/js/ui/: create.js  detail.js  list.js  mixins.js  update.js
railguns/static/railguns/js/util/: http-utils.js
railguns/static/railguns/js/vue/: base.js  common.js  create.js  detail.js  drawer.js  list.js  mdc-components.js  mixins.js  update.js  weui-components.js
railguns/templates/: model_java.txt  model_swift.txt
railguns/templates/railguns/: base.html  base_f7.html  base_quick.html  base_su.html
railguns/templates/railguns/developer/: Model.swift  developer_index.html  downloads.html  show_urls.html
railguns/templates/railguns/f7/: base.html  detail.html  list.html
railguns/templates/railguns/mdc/: base.html  check_list_update.html  collection_list.html  detail.html  grid_list.html  grouped_table_detail.html  list.html  post_detail.html  table_detail.html  table_list.html  table_list_dense.html  text_field_update.html
railguns/templates/railguns/mdc/form/: check_list_update.html  create.html  text_field_update.html
railguns/templates/railguns/mdl/: base.html  collection_list.html  detail.html  list.html  table_list.html
railguns/templates/railguns/su/: base.html
railguns/templates/railguns/ui/: base.html  check_list_update.html  detail.html  list.html  radio_update.html  text_field_update.html
railguns/templates/railguns/ui/form/: check_list_update.html  create.html  text_field_update.html
railguns/templates/railguns/vue/: base.html  detail.html  list.html
railguns/templates/railguns/vue/form/: check_list_update.html  create.html  text_field_update.html
railguns/templates/rest_framework/: admin.html  api.html  login.html
railguns/tools/: utils.py
railguns/utils/: cloud_func.py  text.py
src/railguns/: urls.py
src/railguns/cloudfile/: fields.py  widgets.py
src/railguns/django/: generics.py
src/railguns/django/contrib/: admin.py
src/railguns/django/contrib/auth/: backends.py
src/railguns/django/db/: models.py  utils.py
src/railguns/django/utils/: html.py  translation.py
src/railguns/rest_framework/: generics.py  mixins.py  permissions.py  views.py
src/railguns/rest_framework/schemas/: openapi.py
src/railguns/static/railguns/es2015/: mixins.js  vendor.js
src/railguns/static/railguns/es2015/components/: weui-components.js
src/railguns/static/railguns/es2015/util/: http-utils.js
src/railguns/static/railguns/js/: mixins.js  vendor.js
src/railguns/static/railguns/js/util/: http-utils.js
src/railguns/templates/railguns/ui/: base.html  detail.html
src/railguns/tools/: utils.py
