[project]
name = "railguns"
version = "0.104"
description = "Only My Railgun"
readme = "README.md"
requires-python = ">=3.13"
license = { file = "LICENSE" }
authors = [{ name = "NY ", email = "nyssance@icloud.com" }]
keywords = ["django", "railguns"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Web Environment",
  "Framework :: Django :: 5.0",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.13",
  "Topic :: Internet :: WWW/HTTP",
]
dependencies = [
  "django[argon2]==5.1.6",
  "djangorestframework==3.15.2",
  "djangorestframework_simplejwt==5.4.0",
  "gunicorn==23.0.0",
  "uvicorn==0.34.0",
  #
  "django-ckeditor-5==0.2.17",
  "django-filter==25.1",
  "django-htmlmin==0.11.0",
  "mysql-connector-python==9.2.0",
  "redis==5.2.1",
]

[project.optional-dependencies]
test = ["pytest > 8.0.0", "pytest-cov[all]"]
cli = ["fabric", "rich"]

[project.urls]
Homepage = "https://github.com/nyssance/railguns"
Documentation = "https://github.com/nyssance/railguns"
Repository = "https://github.com/nyssance/railguns.git"
Issues = "https://github.com/nyssance/railguns/issues"
Changelog = "https://github.com/nyssance/railguns/blob/main/CHANGELOG.md"

[tool.isort]
profile = "django"
include_trailing_comma = false
line_length = 120
#multi_line_output = 0

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
